fix: i changed zahanary.html to index.html

--- a/about-us.html
+++ b/about-us.html
@@ -30,7 +30,7 @@
         <ul class="First">
 
             <li class="li1">
-                <a href="zahanary.html">
+                <a href="index.html">
                     Home
                 </a>
             </li>
