--- a/aquisition.html
+++ b/aquisition.html
@@ -29,7 +29,7 @@
     <div class="List">
         <ul class="First">
             <li class="li1">
-                <a href="zahanary.html">
+                <a href="index.html">
                     Home
                 </a>
             </li>
